tests/ui/generator/generator-region-requirements.migrate.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/generator-region-requirements.rs:16:51
   |
LL | fn dangle(x: &mut i32) -> &'static mut i32 {
   |              -------- help: add explicit lifetime `'static` to the type of `x`: `&'static mut i32`
...
LL |             GeneratorState::Complete(c) => return c,
   |                                                   ^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
